Adds basic input/search functionality for Google Places API interface.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 			    };
 			    // call upon controller initialization
 			    $scope.createMarkers();
+			    console.log($scope.markers);
     	  });
     </script>
  </body>
