--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>Angular-Google-Maps Example</title>
   <script src="bower_components/angular/angular.js"></script>
-  <!-- // <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script> -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv2IKyoJNIQ9GdJbgnW-StS9yM_iNPoXw"></script>
 	<script src='bower_components/lodash/dist/lodash.compat.js'></script>
 	<script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
@@ -15,6 +14,9 @@
 	  <google-map center="map.center" zoom="map.zoom" draggable="true">
       <marker ng-repeat="marker in markers" coords="marker.coords" idKey="marker.idKey"></marker>
     </google-map>
+    <input ng-model="currentAddress"></input>
+		<button ng-click="getLatLong()">Submit Address!</submit>
+    
     <script>
     	angular.module('MapsExample', [
     		'google-maps'
@@ -28,20 +30,13 @@
   	  	    },
   	  	    zoom: 13
     	  	};
-    	  	// add test locations for example
-    	  	$scope.locations = {
-			      spots: [
-			        // {
-			        //   number: 1,
-			        //   latitude: 37.7836377,
-			        //   longitude: -122.4132168
-			        // }
-			      ]
-    			};
+
     			// add markers for each location on the loaded tour
 			    $scope.markers = [];
+
 			    // function to create an individual marker
 			    $scope.createMarker = function(location) {
+			    	console.log('createMarker called with location', location);
 			      var marker = {
 			        idKey: location.number,
 			        coords: {
@@ -56,19 +51,20 @@
 			    var geocoder = new google.maps.Geocoder();
 			    
 			    $scope.getLatLong = function() {
-			      for (var j = 0; j < $scope.tour.spots.length; j++) {
-			        var address = $scope.tour.spots[j].address;
-			        geocoder.geocode({'address': address}, function(results, status) {
-			          if(status === google.maps.GeocoderStatus.OK) { 
-			            var markerPosition = new google.maps.LatLng(results[0].geometry.location.k, results[0].geometry.location.B);
-			            markerPosition.number = j;
-			            $scope.markers.push($scope.createMarker(markerPosition));
-			          }
-			        });
-			      }
-			      console.log($scope.markers);
+			    	console.log('getLatLong called with', $scope.currentAddress);
+			      geocoder.geocode({'address': $scope.currentAddress}, function(results, status) {
+		          if(status === google.maps.GeocoderStatus.OK) { 
+		          	var markerPosition = {
+		          	  latitude: results[0].geometry.location.k,
+		          	  longitude: results[0].geometry.location.B,
+		          	  number: $scope.markers.length + 1
+		          	};
+		            $scope.markers.push($scope.createMarker(markerPosition));
+		            // remove address text from input box
+		            $scope.currentAddress = '';
+		          }
+		        });
 			    };
-
     	  });
     </script>
  </body>
